# coder137.github.io

./: .gitignore  Cargo.toml  Dioxus.toml  Gemfile  LICENSE  Makefile.toml  README.md  _config.yml  daisyui.mjs  index.html  tailwind.css
_data/: navigation.yml
_includes/: masthead.html
_pages/: 404.md  about.md  donate.md  freertos_tutorial.md  projects.md  sitemap.md  tutorials.md
_posts/: 2018-05-28-test.md  2018-05-29-first.md  2018-05-30-second.md  2018-05-31-third.md  2018-06-07-introduction-to-freertos.md  2018-06-08-pointer-to-void.md  2018-06-09-function-pointer.md  2018-06-11-download-esp-idf.md  2018-06-18-esp-idf-with-eclipse.md  2018-06-25-create-tasks.md  2018-07-02-parameter-to-tasks.md  2018-07-09-delay-tasks.md  2018-08-30-idle-tasks.md
assets/: coder137-github-io-dxh1204a11afa8ae61.js  coder137-github-io-dxh12a7733f1c6219.js  coder137-github-io-dxh7fcd4ba1aec71bab.js  coder137-github-io-dxhd0bda6165986aa35.js  coder137-github-io-dxhd822f7d59980be93.js  coder137-github-io_bg-dxh42b2716b87583d74.wasm  coder137-github-io_bg-dxh4fa6f5c8ec33b96.wasm  coder137-github-io_bg-dxh64c19824dd64db60.wasm  coder137-github-io_bg-dxh83456d8cda5176a.wasm  coder137-github-io_bg-dxhccd54bdcbf51db.wasm  tailwind-dxh295fee820235897.css  tailwind-dxh345cb41b90a4e9c1.css  tailwind-dxh6d2f6d51a77073.css  tailwind-dxhae1bf9ad4084c9da.css  tailwind-dxhc4a6d0fadf705396.css
docs/: freertos_tutorial.md  posts-by-category.md  posts-by-tags.md  posts-by-year.md
resume/: index.html  package-lock.json  package.json  resume.html
src/: info.rs  main.rs  navigation.rs
(+28 files in other folders)
