[package]
name = "coder137-github-io"
version = "0.1.0"
authors = ["Niket Naidu <coder137@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.5", features = ["fullstack", "router"] }
dioxus-free-icons = { version = "0.10", features = [
    # "material-design-icons-action",
    "font-awesome-brands",
    "font-awesome-regular",
    "font-awesome-solid",
] }

markdown = "1.0.0"

web-sys = "0.3.91"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[dev-dependencies]
tokio = { version = "*", features = ["full"] }
